base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-db
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: mariadb
          image: docker.io/library/mariadb:latest
          ports:
            - containerPort: 80
              name: http
