base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-challenge
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: wordpress
          image: docker.io/library/wordpress:latest
          ports:
            - containerPort: 80
              name: http
