base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-db
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
